freest/test/prog/Invalid/Typing/SigLacksDef/SigLacksDef.fst
module SigLacksDef where

foo : Int -> Int
